--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,9 +17,9 @@ repositories {
 }
 
 plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "7.2.0" apply false
-    id "org.jetbrains.kotlin.android" version "1.7.20" apply false
+    id("dev.flutter.flutter-plugin-loader") version "1.0.0"
+    id("com.android.application") version "8.7.0" apply false
+    id("org.jetbrains.kotlin.android") version "1.8.22" apply false
 }
 
 include ":app"
