--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
   dio: ^5.0.2
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.3.2
+  flutter_riverpod: ^2.6.1
+  formz: ^0.8.0
   go_router: ^14.4.1
   google_fonts: ^6.2.1
 
