--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,12 @@ dependencies:
   dio: ^5.0.2
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
   flutter_riverpod: ^2.6.1
   formz: ^0.8.0
   go_router: ^14.4.1
   google_fonts: ^6.2.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -24,6 +26,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/loaders/
     - assets/images/
     - google_fonts/montserrat_alternates/
