--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  dio: ^5.0.2
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
@@ -15,7 +15,6 @@ dependencies:
   formz: ^0.8.0
   go_router: ^14.4.1
   google_fonts: ^6.2.1
-  http: ^1.4.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
