--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: teslo_shop
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   dio: ^5.8.0+1
@@ -15,6 +15,7 @@ dependencies:
   formz: ^0.8.0
   go_router: ^14.4.1
   google_fonts: ^6.2.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -25,7 +26,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - .env 
+    - .env
     - assets/loaders/
     - assets/images/
     - google_fonts/montserrat_alternates/
