--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   go_router: ^14.4.1
   google_fonts: ^6.2.1
   image_picker: ^1.2.0
+  logger: ^2.6.2
   shared_preferences: ^2.5.3
 
 dev_dependencies:
